fix text wrapping issue

--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -118,6 +118,7 @@
     margin-top: 10px;
     font-family: 'Noto Sans', sans-serif; 
     font-size: 15px;
+    overflow-wrap: break-word;
 }
 
 .username-timestamps-container {
